openshift/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ph-transparente-backend
  labels:
    app: ph-transparente-backend
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: ph-transparente-backend
