openshift/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ph-transparente-frontend
  labels:
    app: ph-transparente-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: ph-transparente-frontend
